<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DouDing</string>
    <string name="action_settings">设置</string>
    <string name="user">帐号</string>
    <string name="password">密码</string>
    <string name="remember">记住密码</string>
    <string name="zidong">自动登录</string>
    <string name="forget">忘记密码或短信登录</string>
    <string name="new_user">新用户</string>
</resources>
